Increase #main-menu max-width to 1100px to avoid menu item wrapping.

--- a/sites/all/themes/educloud_portal/sass/styles.scss
+++ b/sites/all/themes/educloud_portal/sass/styles.scss
@@ -59,7 +59,7 @@
 }
 
 #main-menu {
-  max-width: 900px;
+  max-width: 1100px;
 }
 
 #main-menu .clearfix:after {
